<?xml version="1.0"?>
<package>
  <name>serial_demo</name>
  <version>0.0.0</version>
  <description>The serial_demo package</description>

  <maintainer email="tl@gmail.com">tl</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
 </export>
</package>
